// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image can take a placeholder prop 1`] = `
<Image
  placeholder="http://myPlaceholder"
  src="https://res.cloudinary.com/stackpie/image/upload/v1513979515/-895520106_m1whb3.jpg"
>
  <img
    className="pimg pimg__placeholder"
    src="http://myPlaceholder"
  />
</Image>
`;

exports[`pimg renders correctly 1`] = `
<Image
  src="https://res.cloudinary.com/stackpie/image/upload/v1513979515/-895520106_m1whb3.jpg"
>
  <img
    className="pimg pimg__placeholder"
    src="https://res.cloudinary.com/stackpie/image/upload/c_thumb,w_30/v1513979515/-895520106_m1whb3.jpg"
  />
</Image>
`;
